--- a/BillManagement/pom.xml
+++ b/BillManagement/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.freeway.web</groupId>
-    <artifactId>FreeWayPro</artifactId>
+    <groupId>com.expressway.billmanagement</groupId>
+    <artifactId>bill-management</artifactId>
     <version>1.2.1</version>
     <packaging>war</packaging>
-    <name>FreeWayPro</name>
-    <description>高速公路稽查收费系统</description>
-
+    <name>Bill Management</name>
+    <description>高速公路票据管理系统</description>
+    
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -135,11 +135,6 @@
             <groupId>ojdbc</groupId>
             <artifactId>ojdbc</artifactId>
             <version>14</version>
-        </dependency>
-        <dependency>
-            <groupId>hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>1.8.0.10</version>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
